misc: replace new Integer/Float/etc with `valueOf()` and `parseX()`